--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ font-family: "brodtext";
 	src: url(../fonts/ZillaSlab-Bold.ttf);
 }
 
+.wrapper{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+
 /* LOAD SITE */
 
 #frontNav{
@@ -67,17 +74,32 @@ font-family: "brodtext";
 }
 
 /* PROJECTS */
-
-.img-projects {
-	position: relative;
-	width: 60%;
-	margin: 0 auto;	
+.img-projects{
+    position: relative;
+    width: 60%;
+    margin: 0 auto;
 }
 
-.img-projects img {
+.img-projects img{
+    margin-top: 6%;
+}
+
+#image {
 	margin-top: 6%;
+    grid-column-start: 3;
+    grid-column-end: 7; 
+    grid-row-start: 1;
+    z-index: 1;
+    
 }
 
+#image2{
+    	margin-top: 6%;
+    grid-column-start: 3;
+    grid-column-end: 7; 
+    grid-row-start: 2;
+    z-index: 1;
+}
 h1 {
 	font-family: text;
 	font-size: 20px;
@@ -86,9 +108,11 @@ h1 {
 }
 
 #projects-h1 {
-	position: absolute;
-	margin-top: 17%;
-	margin-left: -22%;
+    z-index: 2;
+    grid-column-start: 2; 
+    grid-column-end: 6;
+	grid-row-start: 1;
+    margin-top: 15%;
 	color: #A34C35;
 }
 
@@ -99,16 +123,21 @@ h2 {
 }
 
 #bakery {
-	position: absolute;
-	margin-top: 26%;
-	margin-left: -14%;
+	position: relative;
+    z-index: 2; 
+    grid-column-start: 2; 
+    grid-column-end: 6;
+	grid-row-start: 1;
+    margin-top: 24%;
 }
 
 #bakery-front {
-	position: absolute;
-	margin-top: 25%;
-	margin-left: 80%;
-	margin-right: -21%;
+	position: relative;
+    z-index: 2; 
+    grid-column-start: 6; 
+    grid-column-end: 8;
+	grid-row-start: 2;
+   margin-top: 30%;
 }
 
 #forrest-h {
